<resources>
    <string name="app_name">Yummy</string>
    <string name="registration">Registration</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="register_here">Register here</string>
    <string name="login">LOGIN</string>
    <string name="food_on_wheels">Food On Wheels</string>
    <string name="password">Password</string>
    <string name="id">id</string>
    <string name="user_name">USER NAME</string>
    <string name="search_items">Search Items</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="welcome">Welcome, %1$s</string>
    <string name="in">Name : %1$s</string>
    <string name="rn">Restaurant : %1$s</string>
    <string name="pi">Price : %1$s</string>
    <string name="search">Search</string>
    <string name="projectName">Food On Wheels</string>
    <string name="item_details">ITEM DETAILS</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="select_location">Select Location</string>
    <string name="total_cost">Total Cost</string>
    <string name="cost">cost</string>
    <string name="place_order">Place Order</string>
    <string name="remove_from_cart">REMOVE FROM CART</string>
    <string name="online_payment">Online Payment</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="sl">select location</string>
    <string name="pm">payment methods</string>
    <string name="order1">ORDER</string>
    <string name="location">Location</string>
    <string name="textview">text</string>
    <string name="total_price">Total Price</string>
    <string name="restaurant">Restaurant</string>
    <string name="order_id">Order Id</string>
    <string name="delivery_status">Delivery Status</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="order_status">Order Status</string>
    <string name="home">Home</string>
    <string name="not_user">not user?</string>
    <string name="not_user_click_here">Not User? Click here</string>
    <string name="restaurant_login_here">Restaurant? Login here</string>
    <string name="not_customer_register_here">Not Customer? Register here</string>
    <string name="customer_login">Customer Login</string>
    <string name="title_activity_del_home">DelHome</string>
    <string name="item_name">item name</string>
    <string name="item_price">item price</string>
    <string name="add_item">Add Item</string>
    <string name="items_list">Items List</string>
    <string name="orders_list">Orders List</string>
    <string name="order_by">Order by</string>
    <string name="remove_item">Remove Item</string>
    <string name="selected_orders">Selected Orders</string>
    <string name="update_delivery_status">Update delivery status</string>
    <string name="update">UPDATE</string>
    <string name="order_tracking">Order tracking</string>
</resources>
