<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/wel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="24sp"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:id="@+id/iname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/item_name"
        android:inputType="textPersonName"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/iprice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/item_price"
        android:inputType="textPersonName"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/aitem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_item"
        android:layout_marginBottom="50dp"/>

    <Button
        android:id="@+id/il"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/items_list"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/ol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orders_list" />

</LinearLayout>