<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="59dp"
        android:text="@string/user_name"
        android:textSize="24sp"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:id="@+id/usersearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="20dp"
        android:hint="@string/search_items"
        android:inputType="none"
        android:textSize="24sp" />

    <Button
        android:id="@+id/entersearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:text="@string/search"
        android:textSize="18sp" />

    <Button
        android:id="@+id/list_of_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/items_list"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cart"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/ord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orders"
        android:layout_marginTop="20dp"/>

</LinearLayout>