<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width = "match_parent"
    android:background="@color/lg">
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/linearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/projectName"
        android:textSize="30sp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="100dp"/>
    <EditText
        android:id="@+id/usern"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/userp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@android:color/white" />
    <Button
        android:id="@+id/usersubmit"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register_here"
        android:layout_marginTop="16dp"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/notuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/restaurant_login_here"
        android:textSize="12sp" />
</LinearLayout>

</RelativeLayout>