<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/wel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="24sp"
        android:layout_marginBottom="40dp"/>
    <Button
        android:id="@+id/ol1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orders_list"
        android:layout_marginBottom="20dp"/>
    <Button
        android:id="@+id/so"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selected_orders"
        android:layout_marginBottom="20dp"/>
</LinearLayout>