<?xml version="1.0" encoding="utf-8"?>


<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_marginStart="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:background="@color/lime"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/app_name" />
    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>


    <EditText
        android:id="@+id/resemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress|textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/resname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/respassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@android:color/white" />


    <Button
        android:id="@+id/resreg"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/register_here"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reslogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@null"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

</LinearLayout>
