<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/item_name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="36sp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/res_name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="36sp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/rcart1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_from_cart"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/home1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_marginTop="20dp"/>
</LinearLayout>