<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="36sp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/res_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="36sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/item_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="36sp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/acart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_to_cart"
        android:textSize="18sp" />

    <Button
        android:id="@+id/rcart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_from_cart"
        android:textSize="18sp"
        android:visibility="invisible" />
</LinearLayout>